[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Alexander McKinlay <amckinlay@mathspace.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
numba = "^0.59.1"
ruff = "^0.3.7"
lightgbm = "^4.3.0"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
